test/corpus/macros.txt
==================
Macros Skipping Discards
==================
' #_ "ignore" 1
---
(source
  (quote
    (discard target: (string))
    target: (number)))

==================
Recursive Quote
==================
''foo
---
(source
  (quote
    target: (quote target: (symbol name: (symbol_name)))))

==================
Macro Skipping Multiple Discards
==================
@ #_ 1 #_ 2 my-atom
---
(source
  (deref
    (discard target: (number))
    (discard target: (number))
    target: (symbol name: (symbol_name))))

==================
Multiple discards
==================
#_#_ 1 2
---
(source
      (discard
        (discard
          target: (number))
        target: (number)))

==================
Metadata wrapping a Quote
==================
^:private 'foo
---
(source
  (with_metadata
    meta: (metadata value: (keyword name: (symbol_name)))
    target: (quote
      target: (symbol name: (symbol_name)))))

==================
Var Quote with Metadata on Target
==================
#' ^:dynamic my-var
---
(source
  (var_quote
    target: (with_metadata
      meta: (metadata value: (keyword name: (symbol_name)))
      target: (symbol name: (symbol_name)))))

==================
Complex Nested Macros (Unquote in Quote)
==================
`[~@foo]
---
(source
  (syntax_quote
    target: (vector_literal
      (unquote_splicing
        target: (symbol name: (symbol_name))))))

==================
Anonymous Function with Discards
==================
#( #_ "log" + %1 %2)
---
(source
  (fn_literal
    (discard target: (string))
    (symbol name: (symbol_name))
    (symbol name: (symbol_name))
    (symbol name: (symbol_name))))

==================
Tagged Literal with Whitespace and Discard
==================
# uuid #_ "fixme" "550e8400-e29b-41d4-a716-446655440000"
---
(source
  (tagged_literal
    tag: (symbol name: (symbol_name))
    (discard target: (string))
    target: (string)))

==================
Reader Conditional with Splicing
==================
#?@(:clj [1 2] :cljs [3 4])
---
(source
  (reader_conditional
    marker: (marker_splicing)
    body: (list_literal
      (keyword name: (symbol_name)) (vector_literal (number) (number))
      (keyword name: (symbol_name)) (vector_literal (number) (number)))))

==================
Deref of a Metadata wrapped Symbol
==================
@^:private my-atom
---
(source
  (deref
    target: (with_metadata
      meta: (metadata value: (keyword name: (symbol_name)))
      target: (symbol name: (symbol_name)))))

==================
Syntax Quote (Backtick)
==================
`[1 ~x]
---
(source
  (syntax_quote
    target: (vector_literal
      (number)
      (unquote
        target: (symbol name: (symbol_name))))))

==================
Syntax Quote skipping discard
==================
` #_ ignore foo
---
(source
  (syntax_quote
    (discard target: (symbol name: (symbol_name)))
    target: (symbol name: (symbol_name))))


=========================
Eval Literal (Basic List)
=========================
#=(+ 1 2)
---
(source
  (eval_literal
    value: (list_literal
      (symbol
        name: (symbol_name))
      (number)
      (number))))

=====================
Eval Literal (Symbol)
=====================
#=java.version
---
(source
  (eval_literal
    value: (symbol
      name: (symbol_name))))

=======================
Eval Literal (With Gap)
=======================
#= (+ 1 2)
---
(source
  (eval_literal
    value: (list_literal
      (symbol
        name: (symbol_name))
      (number)
      (number))))


=====================
Eval Literal (Nested)
=====================
[#=(* 2 3)]
---
(source
  (vector_literal
    (eval_literal
      value: (list_literal
        (symbol
          name: (symbol_name))
        (number)
        (number)))))
